Updated UI responsiveness and fixed layout issues

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,16 +3,17 @@
 @import "tailwindcss";
 
 * {
-    font-family: sans-serif;
-    /* overflow-x: hidden; */
+    font-family: "Saira", sans-serif;
+
 }
 
 html {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
 }
 
-html, body {
-  overflow-x: hidden;
+html,
+body {
+    overflow-x: hidden;
 }
 
 @theme {
@@ -40,7 +41,7 @@ html, body {
     }
 
     to {
-        width: 19ch;
+        width: 15ch;
     }
 
 }
